--- a/C1-L05-Ex1.qmd
+++ b/C1-L05-Ex1.qmd
@@ -46,6 +46,7 @@ $$
 I implemented this expression as a function using python
 
 ```{python}
+#| label: C1-L05-Ex1-1
 from math import comb
 def l5q2(y:int=0,
          N=5,
@@ -119,6 +120,7 @@ $$
 and this is code to implement Bayes' rule
 
 ```{python}
+#| label: C1-L05-Ex1-2
 from math import comb
 def l5q4(y:int=0,
          Py1C:float=0.8,
@@ -169,6 +171,7 @@ print(f"{l5q4(y=0, theta='C')=}")
 we can reuse the function
 
 ```{python}
+#| label: C1-L05-Ex1-3
 print(f"{l5q4(y=0, theta='L')=}")
 ```
 :::
@@ -217,6 +220,7 @@ is the highest value among the three when $X=2$
 #### Solution:
 
 ```{python}
+#| label: C1-L05-Ex1-4
 # key
 # 'F' for fair, 'LH' for Loaded Heads, 'LT' for Loaded Tails
 # PH1F is the conditional probability of heads given Fair
@@ -261,6 +265,7 @@ print(f"{l5q8(x=2,theta='F')=}")
 #### Solution:
 
 ```{python}
+#| label: C1-L05-Ex1-5
 
 print(f"{1-l5q8(x=2,theta='F')=}")
 
@@ -274,6 +279,7 @@ print(f"{l5q8(x=2,theta='LH')+l5q8(x=2,theta='LT')=}")
 I think that the above is pretty neat for a quick calculation but that one could do better. The conditional probabilities and the priors can be specified using a map from keys to probabilities.
 
 ```{python}
+#| label: C1-L05-Ex1-6
 from math import comb
 
 # key
