--- a/C1-L07.qmd
+++ b/C1-L07.qmd
@@ -184,6 +184,7 @@ The likelihood is $\mathrm{Binomial}(40, \theta)$ if we assume that each questio
 The **Conjugate Prior** is a **Beta Distribution**. We can plot the density with `dbeta`
 
 ```{R}
+#| label: C1-L07-1
 theta = seq(from = 0, to = 1, by = 0.1)
 # Uniform
 plot(theta, dbeta(theta, 1, 1), type = 'l')
@@ -196,6 +197,7 @@ plot(theta, dbeta(theta, 8, 4), type = 'l')
 4.  What are the prior probabilities $P(\theta > 0.25)$? $P(\theta > 0.5)$? $P(\theta > 0.8)$?
 
 ```{R}
+#| label: C1-L07-2
 1 - pbeta(0.25, 8, 4)
 #[1] 0.998117
 1 - pbeta(0.5, 8, 4)
@@ -215,6 +217,7 @@ plot(theta, dbeta(theta, 8, 4), type = 'l')
 We can plot the posterior distribution with the prior
 
 ```{R}
+#| label: C1-L07-3
 plot(theta, dbeta(theta, 41, 11), type = 'l')
 lines(theta, dbeta(theta, 8 ,4), lty = 2) #Dashed line for prior
 ```
@@ -222,6 +225,7 @@ lines(theta, dbeta(theta, 8 ,4), lty = 2) #Dashed line for prior
 Posterior probabilities
 
 ```{R}
+#| label: C1-L07-4
 1 - pbeta(0.25, 41, 11)
 #[1] 1
 1 - pbeta(0.5, 41, 11)
@@ -233,6 +237,7 @@ Posterior probabilities
 Equal-tailed 95% credible interval
 
 ```{R}
+#| label: C1-L07-5
 qbeta(0.025, 41, 11)
 #[1] 0.6688426
 qbeta(0.975, 41, 11)
@@ -252,6 +257,7 @@ With a posterior mean of $\frac{32}{32+20} = \frac{32}{52}$
 We can plot the posterior distribution with the prior
 
 ```{R}
+#| label: C1-L07-6
 plot(theta, dbeta(theta, 32, 20), type = 'l')
 lines(theta, dbeta(theta, 8 ,4), lty = 2) #Dashed line for prior
 ```
@@ -259,6 +265,7 @@ lines(theta, dbeta(theta, 8 ,4), lty = 2) #Dashed line for prior
 Posterior probabilities
 
 ```{R}
+#| label: C1-L07-7
 1 - pbeta(0.25, 32, 20)
 #[1] 1
 1 - pbeta(0.5, 32, 20)
@@ -270,6 +277,7 @@ Posterior probabilities
 Equal-tailed 95% credible interval
 
 ```{R}
+#| label: C1-L07-8
 qbeta(0.025, 32, 20)
 #[1] 0.4808022
 qbeta(0.975, 32, 20)
@@ -285,6 +293,7 @@ i.e., that the first student has a better chance of getting a question right tha
 Estimate by simulation: draw 1,000 samples from each and see how often we observe $\theta_1 > \theta_2$
 
 ```{R}
+#| label: C1-L07-9
 theta1 = rbeta(100000, 41, 11)
 theta2 = rbeta(100000, 32, 20)
 mean(theta1 > theta2)
