--- a/C1-L10-Ex1.qmd
+++ b/C1-L10-Ex1.qmd
@@ -78,6 +78,7 @@ $$
 $$
 
 ```{R}
+#| label: C1-L10-Ex1-1
 library(testit)
 y <- c(94.6, 95.4, 96.2, 94.9, 95.9)
 sample_mean = mean(y)
@@ -114,6 +115,7 @@ Use R or Excel to find the upper end of a 95% equal-tailed credible interval for
 
 
 ```{R}
+#| label: C1-L10-Ex1-2
 a=96.17
 b=0.042
 qnorm(p=0.975, mean=a, sd=sqrt(b))
@@ -131,6 +133,7 @@ After collecting these data, is it reasonable to conclude that the thermometer i
 
 
 ```{R}
+#| label: C1-L10-Ex1-3
 a=96.17
 b=0.042
 pnorm(q=100, mean=a, sd=sqrt(b))
@@ -224,6 +227,7 @@ $w+n=27.1$
 
 
 ```{R}
+#| label: C1-L10-Ex1-4
 #liklihood N(mu,sigma_sq)=N(m,sigma_sq/w)
 m=500 # mean dish wight
 w=0.1 # effective sample size
@@ -259,6 +263,7 @@ To simulate draws from this posterior, begin by drawing values for $\sigma^2$ fr
 To simulate 1000 draws in R:
 
 ```{R}
+#| label: C1-L10-Ex1-5
 z <- rgamma(1000, shape=16.5, rate=6022.9)
 sig2 <- 1/z
 mu <- rnorm(1000, mean=609.3, sd=sqrt(sig2/27.1))
@@ -269,6 +274,7 @@ We can use these simulated draws to help us approximate inferences for $μ$ and 
 **For example, we can obtain a 95% equal-tailed credible for** $μ$ by calculating the quantiles/percentiles of the simulated values.
 
 ```{R}
+#| label: C1-L10-Ex1-6
 quantile(x=mu, probs=c(0.025, 0.975))
 ```
 
@@ -282,6 +288,7 @@ Perform the posterior simulation described above and compute your approximate 95
 I got this part wrong many times so I figured out how to add assertions to verify the numbers were what I expected. Since R was rounding off some numbers and not others.
 
 ```{R}
+#| label: C1-L10-Ex1-7
 library(testit)    # <1>
 n <- 27.0          # <2>
 y_hat <- 609.7     # <3>
@@ -311,6 +318,7 @@ assert("m_tag",m_tag == 609.3)
 9.  `m` is the prior dish weight from @exr-normal-8
 
 ```{R}
+#| label: C1-L10-Ex1-8
 z <- rgamma(1000, shape=16.5, rate=6022.9)
 sig2 <- 1/z
 mu <- rnorm(1000, mean=609.3, sd=sqrt(sig2/27.1))
@@ -334,6 +342,7 @@ Treating the data from Restaurant A as independent from Restaurant B, we can now
 In R (using 1000 simulated values):
 
 ```{R}
+#| label: C1-L10-Ex1-9
 # sum( muA > muB ) / 1000
 ```
 
@@ -349,6 +358,7 @@ I first wanted to replicate the derivation of the numbers given as they seemed r
 This R code for the actual simulation is as follows:
 
 ```{r}
+#| label: C1-L10-Ex1-10
 z <- rgamma(1000, shape=18, rate=6796.4) # <1>
 sig2 <- 1/z # <2>
 muA <- rnorm(1000, mean=622.4, sd=sqrt(sig2/30.1))  # <3>
