--- a/C2-L04.qmd
+++ b/C2-L04.qmd
@@ -263,6 +263,7 @@ $$
 This function will require three arguments, $\mu$, $\bar{y}$, and $n$.
 
 ```{r}
+#| label: C2-L04-1
 lg = function(mu, n, ybar) {
   mu2 = mu^2
   n * (ybar * mu - mu2 / 2.0) - log(1 + mu2)
@@ -272,6 +273,7 @@ lg = function(mu, n, ybar) {
 Next, let's write a function to execute the **Random-Walk Metropolis-Hastings** sampler with *Normal* proposals.
 
 ```{r}
+#| label: C2-L04-2
 mh = function(n, ybar, n_iter, mu_init, cand_sd) {
   ## Random-Walk Metropolis-Hastings algorithm
   
@@ -311,6 +313,7 @@ mh = function(n, ybar, n_iter, mu_init, cand_sd) {
 Now, let's set up the problem.
 
 ```{r}
+#| label: C2-L04-3
 y = c(1.2, 1.4, -0.5, 0.3, 0.9, 2.3, 1.0, 0.1, 1.3, 1.9)
 ybar = mean(y)
 n = length(y)
@@ -323,12 +326,14 @@ points(ybar, 0, pch=19) # sample mean
 Finally, we're ready to run the sampler! Let's use $m=1000$ iterations and proposal standard deviation (which controls the proposal step size) $3.0$, and initial value at the prior median $0$.
 
 ```{r}
+#| label: C2-L04-4
 set.seed(43) # set the random seed for reproducibility
 post = mh(n=n, ybar=ybar, n_iter=1e3, mu_init=0.0, cand_sd=3.0)
 str(post)
 ```
 
 ```{r}
+#| label: C2-L04-5
 library("coda")
 traceplot(as.mcmc(post$mu))
 ```
@@ -338,40 +343,47 @@ This last plot is called a trace plot. It shows the history of the chain and pro
 It appears our proposal step size was too large (acceptance rate below 23%). Let's try another.
 
 ```{r}
+#| label: C2-L04-6
 post = mh(n=n, ybar=ybar, n_iter=1e3, mu_init=0.0, cand_sd=0.05)
 post$accpt
 ```
 
 ```{r}
+#| label: C2-L04-7
 traceplot(as.mcmc(post$mu))
 ```
 
 Oops, the acceptance rate is too high (above 50%). Let's try something in between.
 
 ```{r}
+#| label: C2-L04-8
 
 post = mh(n=n, ybar=ybar, n_iter=1e3, mu_init=0.0, cand_sd=0.9)
 post$accpt
 ```
 
 ```{r}
+#| label: C2-L04-9
 traceplot(as.mcmc(post$mu))
 ```
 
 Which looks good. Just for fun, let's see what happens if we initialize the chain at some far-off value.
 
 ```{r}
+#| label: C2-L04-10
 post = mh(n=n, ybar=ybar, n_iter=1e3, mu_init=30.0, cand_sd=0.9)
 post$accpt
 ```
 
 ```{r}
+#| label: C2-L04-11
 traceplot(as.mcmc(post$mu))
 ```
 
 It took awhile to find the stationary distribution, but it looks like we succeeded! If we discard the first 100 or so values, it appears like the rest of the samples come from the stationary distribution, our posterior distribution! Let's plot the posterior density against the prior to see how the data updated our belief about $\mu$.
 
 ```{r}
+#| label: C2-L04-12
 post$mu_keep = post$mu[-c(1:100)] # discard the first 200 samples
 plot(density(post$mu_keep, adjust=2.0), main="", xlim=c(-1.0, 3.0), xlab=expression(mu)) # plot density estimate of the posterior
 curve(dt(x=x, df=1), lty=2, add=TRUE) # prior for mu
@@ -422,6 +434,7 @@ We will demonstrate these steps with our running example with the data are the p
 In this step, we give `JAGS` the hierarchical structure of the model, assigning distributions to the data (the likelihood) and parameters (priors). The syntax for this step is very similar to `R`, but there are some key differences.
 
 ```{r}
+#| label: C2-L04-13
 library("rjags")
 
 mod_string = " model {
@@ -438,6 +451,7 @@ One of the primary differences between the syntax of `JAGS` and `R` is how the d
 ### 2. Set up the model
 
 ```{r}
+#| label: C2-L04-14
 set.seed(50)
 y = c(1.2, 1.4, -0.5, 0.3, 0.9, 2.3, 1.0, 0.1, 1.3, 1.9)
 n = length(y)
@@ -457,6 +471,7 @@ There are multiple ways to specify initial values here. They can be explicitly s
 ### 3. Run the MCMC sampler
 
 ```{r}
+#| label: C2-L04-15
 update(mod, 500) # burn-in
 
 mod_sim = coda.samples(model=mod, variable.names=params, n.iter=1000)
@@ -467,10 +482,12 @@ We will discuss more options to the `coda.samples` function in coming examples.
 ### 4. Post-processing
 
 ```{r}
+#| label: C2-L04-16
 summary(mod_sim)
 ```
 
 ```{r}
+#| label: C2-L04-17
 library("coda")
 plot(mod_sim)
 ```
