--- a/C2-L09.qmd
+++ b/C2-L09.qmd
@@ -24,6 +24,7 @@ keywords:
 For an example of logistic regression [**logistic regression**]{.column-margin} \index{logistic regression}, we'll use the urine data set from the `boot` package in `R`. The response variable is `r`, which takes on values of 0 or 1. We will remove some rows from the data set which contain missing values.
 
 ```{r}
+#| label: C2-L09-1
 library("boot")
 data("urine")
 ?urine
@@ -31,6 +32,7 @@ head(urine)
 ```
 
 ```{r}
+#| label: C2-L09-2
 dat = na.omit(urine) #<1>
 ```
 
@@ -39,6 +41,7 @@ dat = na.omit(urine) #<1>
 Let's look at pairwise scatter plots of the seven variables.
 
 ```{r}
+#| label: C2-L09-3
 pairs(dat)
 ```
 
@@ -69,6 +72,7 @@ We have seen a few strategies ways to deal with these issues:
 We can more formally estimate the correlation among these variables using the `corrplot` package.
 
 ```{r}
+#| label: C2-L09-4
 library("corrplot")
 Cor = cor(dat)
 corrplot(Cor, type="upper", method="ellipse", tl.pos="d")
@@ -83,15 +87,18 @@ One primary goal of this analysis is to find out which variables are related to 
 Rather than tailoring a prior for each individual $\beta$ based on the scale its covariate takes values on, it is customary to subtract the mean and divide by the standard deviation for each variable.
 
 ```{r}
+#| label: C2-L09-5
 X = scale(dat[,-1], center=TRUE, scale=TRUE)
 head(X[,"gravity"])
 ```
 
 ```{r}
+#| label: C2-L09-6
 colMeans(X)
 ```
 
 ```{r}
+#| label: C2-L09-7
 apply(X, 2, sd)
 ```
 
@@ -100,6 +107,7 @@ apply(X, 2, sd)
 Our prior for the $\beta$ (which we'll call $b$ in the model) coefficients will be the double exponential (or Laplace) distribution, which as the name implies, is the exponential distribution with tails extending in the positive direction as well as the negative direction, with a sharp peak at 0. We can read more about it in the `JAGS` manual. The distribution looks like:
 
 ```{r}
+#| label: C2-L09-8
 ddexp = function(x, mu, tau) {
   0.5*tau*exp(-tau*abs(x-mu)) 
 }
@@ -109,10 +117,12 @@ legend("topright", legend=c("double exponential", "normal"), lty=c(1,2), bty="n"
 ```
 
 ```{r}
+#| label: C2-L09-9
 library("rjags")
 ```
 
 ```{r}
+#| label: C2-L09-10
 mod1_string = " model {
     for (i in 1:length(y)) {
         y[i] ~ dbern(p[i])
@@ -155,10 +165,12 @@ dic1 = dic.samples(mod1, n.iter=1e3)
 Let's look at the results.
 
 ```{r}
+#| label: C2-L09-11
 summary(mod1_sim)
 ```
 
 ```{r}
+#| label: C2-L09-12
 #par(mfrow=c(3,2))
 par(mar = c(2.5, 1, 2.5, 1))
 
@@ -166,6 +178,7 @@ densplot(mod1_csim[,1:6], xlim=c(-3.0, 3.0))
 ```
 
 ```{r}
+#| label: C2-L09-13
 colnames(X) # variable names
 ```
 
@@ -176,6 +189,7 @@ It is clear that the coefficients for variables `gravity`, `cond` (conductivity)
 Our second model looks like this:
 
 ```{r}
+#| label: C2-L09-14
 mod2_string = " model {
     for (i in 1:length(y)) {
         y[i] ~ dbern(p[i])
@@ -191,6 +205,7 @@ mod2 = jags.model(textConnection(mod2_string), data=data_jags, n.chains=3)
 ```
 
 ```{r}
+#| label: C2-L09-15
 update(mod2, 1e3)
 
 mod2_sim = coda.samples(model=mod2,
@@ -213,28 +228,34 @@ dic2 = dic.samples(mod2, n.iter=1e3)
 ### Results
 
 ```{r}
+#| label: C2-L09-16
 dic1
 ```
 
 ```{r}
+#| label: C2-L09-17
 dic2
 ```
 
 ```{r}
+#| label: C2-L09-18
 summary(mod2_sim)
 ```
 
 ```{r}
+#| label: C2-L09-19
 HPDinterval(mod2_csim)
 ```
 
 ```{r}
+#| label: C2-L09-20
 #par(mfrow=c(3,1))
 par(mar = c(2.5, 1, 2.5, 1))
 densplot(mod2_csim[,1:3], xlim=c(-3.0, 3.0))
 ```
 
 ```{r}
+#| label: C2-L09-21
 colnames(X)[c(1,4,6)] # variable names
 ```
 
