--- a/C1-L03-alt.qmd
+++ b/C1-L03-alt.qmd
@@ -1,6 +1,7 @@
 
 
 ```{r include=FALSE}
+#| label: C1-L03-alt-1
 # Necessary for using dvisvgm on macOS
 # See https://www.andrewheiss.com/blog/2021/08/27/tikz-knitr-html-svg-fun/
 Sys.setenv(LIBGS = "/usr/local/share/ghostscript/9.53.3/lib/libgs.dylib.9.53")
@@ -8,6 +9,7 @@ font_opts <- list(dvisvgm.opts = "--font-format=woff")
 ```
 
 ```{tikz bernoulli-mindmap, engine.opts=font_opts}
+#| label: C1-L03-alt-2
 #| echo: false
 #| fig-cap: "Bernoulli mindmap"
 #| fig-align: center
@@ -93,6 +95,7 @@ $$ {#eq-bernoulli-information}
 
 
 ```{tikz Binomial-reparams, engine.opts=font_opts}
+#| label: C1-L03-alt-3
 #| echo: false
 #| fig-cap: "Binomial reparams mindmap"
 #| fig-align: center
@@ -167,6 +170,7 @@ $$ {#eq-binomial-information}
 #### Relationships
 
 ```{tikz Binomial-mindmap, engine.opts=font_opts}
+#| label: C1-L03-alt-4
 #| echo: false
 #| fig-cap: "Binomial mindmap"
 #| fig-align: center
@@ -212,6 +216,7 @@ $$ {#eq-binomial-information}
 ```
 
 ```{tikz Binomial-relations-chart, engine.opts=font_opts}
+#| label: C1-L03-alt-5
 #| echo: false
 #| fig-cap: "Binomial Relations"
 #| fig-align: center
