--- a/C1-L05-Ex2.qmd
+++ b/C1-L05-Ex2.qmd
@@ -109,6 +109,7 @@ Report the upper end of a 95% equal-tailed interval for θ.
 #### Solution:
 
 ```{r}
+#| label: C1-L05-Ex2-1
 qnorm(p=0.975, mean=0, sd=1)
 ```
 
