--- a/C1-L07-Ex1.qmd
+++ b/C1-L07-Ex1.qmd
@@ -33,6 +33,7 @@ Which of the following graphs depicts the posterior PDF of $\theta$ if we observ
 #### Solution:
 
 ```{R}
+#| label: C1-L07-Ex1-1
 theta = seq(from = 0, to = 1, by = 0.1)
 # Uniform
 plot(theta, dbeta(theta, 1, 5), type = 'l')
@@ -47,6 +48,7 @@ What is the maximum likelihood estimate (MLE) of θ if we observe the sequence (
 #### Solution:
 
 ```{R}
+#| label: C1-L07-Ex1-2
 4*0/4
 ```
 
@@ -61,6 +63,7 @@ What is the posterior mean estimate of $\theta$ if we observe the sequence (T, T
 #### Solution:
 
 ```{R}
+#| label: C1-L07-Ex1-3
 a=1
 b=5
 a/(a+b)
@@ -75,6 +78,7 @@ Use R or Excel to find the posterior probability that $θ<0.5$ if we observe the
 #### Solution:
 
 ```{R}
+#| label: C1-L07-Ex1-4
 a=1
 b=5
 pbeta(q=0.5, shape1=a, shape2=b)
@@ -111,6 +115,7 @@ Use R to calculate the upper end of an equal-tailed 95% credible interval for θ
 #### Solution:
 
 ```{R}
+#| label: C1-L07-Ex1-5
 a=8
 b=16
 qbeta(p=0.975, shape1=a, shape2=b)
@@ -131,6 +136,7 @@ Calculate the posterior probability $P(\theta < .35 \mid x)$. In your role as th
 #### Solution:
 
 ```{R}
+#| label: C1-L07-Ex1-6
 a=8
 b=16
 pbeta(q=0.35, shape1=a, shape2=b)
@@ -154,6 +160,7 @@ Calculate the new posterior probability $P(\theta < .35 \mid x_1, x_2)$. In your
 Hint: You can use the posterior from the previous analysis as the prior for this analysis. Assuming independence of tests, this yields the same posterior as the analysis in which we begin with the Beta(2,2) prior and use all 25 tests as the data.
 
 ```{R}
+#| label: C1-L07-Ex1-7
 a=8
 b=16
 a2=a+0
