--- a/C1-L08-Ex1.qmd
+++ b/C1-L08-Ex1.qmd
@@ -156,6 +156,7 @@ Continuing [@exr-poisson-4], use R or Excel to find the lower end of a 90% equal
 #### Solution:
 
 ```{R}
+#| label: C1-L08-Ex1-2
 # Set parameters
 shape <- 8+59
 rate <- 1+5
