--- a/C1-L12-Ex1.qmd
+++ b/C1-L12-Ex1.qmd
@@ -14,6 +14,7 @@ If you wish to separate the LPGA and PGA data, one way in R is to use the subset
 where "dat" is the name of the original data set (replace "dat" with whatever you named this data set), "FM" is the name of the third column (replace "FM" with whatever you named this column), and select=1:2 means to include columns 1 and 2 in the new data set "datF".
 
 ```{r}
+#| label: C1-L12-Ex1-1
 dat=read.table("data/pgalpga2008.dat.txt", header=T)
 # Note that attaching this masks T which is originally TRUE
 attach(dat)
@@ -37,6 +38,7 @@ summary(datF)
 #### Solution:
 
 ```{r}
+#| label: C1-L12-Ex1-2
 plot(datM$distance, datM$accuracy, main="Scatterplot", xlab="distance (yards)", ylab="accuracy(pct)", pch=19)
 abline(lm(datM$accuracy~datM$distance), col="red") # regression line (y~x)
 lines(lowess(datM$accuracy,datM$distance), col="blue") # lowess line (x,y)
@@ -66,6 +68,7 @@ Report the posterior mean estimate of the slope parameter $b$ relating drive dis
 #### Solution:
 
 ```{r}
+#| label: C1-L12-Ex1-3
 mod1 <- lm(accuracy ~ distance, data=datF)
 summary(mod1)
 ```
@@ -100,6 +103,7 @@ Suppose the estimate is $b$. How do we interpret this value?
 Use the posterior mean estimates of the model coefficients to obtain a posterior predictive mean estimate of driving accuracy for a new female golfer whose average driving distance is x=260 yards. Round your answer to one decimal place.
 
 ```{r}
+#| label: C1-L12-Ex1-4
 predict.lm(mod1,data.frame(distance=260))
 ```
 :::
@@ -115,6 +119,7 @@ Hint: Modify the code provided with this lesson under "prediction interval."
 #### Solution:
 
 ```{r}
+#| label: C1-L12-Ex1-5
 #64.21029  -  0.03631 * qt(.975,195-2)
 #64.21029  +  0.03631 * qt(.975,195-2)
 #predict.lm(mod1,data.frame(distance=260),interval="confidence", level=0.95)
