--- a/C1-L12-Ex2.qmd
+++ b/C1-L12-Ex2.qmd
@@ -23,6 +23,7 @@ What is the posterior mean estimate of $b_0$ ? Round your answer to the nearest 
 #### Solution:
 
 ```{r}
+#| label: C1-L12-Ex2-1
 dat=read.table("data/pgalpga2008.dat.txt", header=T)
 # Note that attaching this masks T which is originally TRUE
 attach(dat)
@@ -69,6 +70,7 @@ The estimated value of $b_2$ would typically be interpreted to mean that holding
 It would also be prudent to check that the model fits the data well. One of the primary tools in regression analysis is the residual plot. Residuals are defined as the observed values y minus their predicted values  $\hat{y}$ . Patterns in the plot of  $\hat{y}$ versus residuals, for example, can indicate an inadequacy in the model. These plots are easy to produce.
 
 ```{r}
+#| label: C1-L12-Ex2-2
 plot(fitted(mod2), residuals(mod2))
 abline(lm(residuals(mod2)~fitted(mod2)), col="red") # regression line (y~x)
 ```
