--- a/C2-L05-Ex1.qmd
+++ b/C2-L05-Ex1.qmd
@@ -216,6 +216,7 @@ Re-run the Gibbs sampler in R for these new data (5000 iterations using the same
 #### Solution:
 
 ```{r}
+#| label: C2-L05-Ex1-1
 #' update_mu
 #'
 #' @param n - sample size
@@ -296,6 +297,7 @@ post = gibbs(y=y, n_iter=5e3, init=init, prior=prior)
 ```
 
 ```{r}
+#| label: C2-L05-Ex1-2
 library("coda")
 summary(as.mcmc(post))
 ```
@@ -313,6 +315,7 @@ What happens to the posterior mean of μ? Re-run the analysis on the new data wi
 #### Solution:
 
 ```{r}
+#| label: C2-L05-Ex1-3
 y = c(-0.2, -1.5, -5.3, 0.3, -0.8, -2.2)
 ybar = mean(y)
 n = length(y)
@@ -340,6 +343,7 @@ post = gibbs(y=y, n_iter=5e3, init=init, prior=prior)
 ```
 
 ```{r}
+#| label: C2-L05-Ex1-4
 library("coda")
 summary(as.mcmc(post))
 ```
