--- a/C2-L06-Ex2.qmd
+++ b/C2-L06-Ex2.qmd
@@ -83,6 +83,7 @@ All of the terms involving only β are identical in the numerator and denominato
 For Questions 4 and 5, re-run the Metropolis-Hastings algorithm from Lesson 4 to draw posterior samples from the model for mean company personnel growth for six new companies: (-0.2, -1.5, -5.3, 0.3, -0.8, -2.2). Use the same prior as in the lesson.
 
 ```{r}
+#| label: C2-L06-Ex2-1
 {library("rjags")}
 library("coda")
 
@@ -137,6 +138,7 @@ n = length(y)
 ```
 
 ```{r}
+#| label: C2-L06-Ex2-2
 sds = c(0.5,1.5,3.0,4.0)
 y = c(-0.2, -1.5, -5.3, 0.3, -0.8, -2.2)
 ybar = mean(y)
