--- a/C2-L07-Ex1.qmd
+++ b/C2-L07-Ex1.qmd
@@ -34,6 +34,7 @@ This model is not linear in the coefficients. We are free to transform the predi
 [Linear Regression]{.column-margin} Consider the Anscombe data set in R which can be accessed with the following code:
 
 ```{r}
+#| label: C2-L07-Ex1-1
 library("car")  # load the 'car' package
 data("Anscombe")  # load the data set
 ?Anscombe  # read a description of the data
@@ -41,6 +42,7 @@ data("Anscombe")  # load the data set
 
 
 ```{r}
+#| label: C2-L07-Ex1-2
 head(Anscombe)  # look at the first few lines of the data
 ```
 
@@ -71,6 +73,7 @@ What is the posterior mean estimate of the intercept in this model? Round your a
 :::
 
 ```{r}
+#| label: C2-L07-Ex1-4
 mod_0=lm(data = Anscombe,formula = 'education ~ income + young + urban')
 summary((mod_0))
 ```
