--- a/C2-L07-Ex2.qmd
+++ b/C2-L07-Ex2.qmd
@@ -42,6 +42,7 @@ One exception is if we use a completely different class of priors or prior struc
 [DIC]{.column-margin} Although the residual analysis of the Anscombe data showed no major problem that we will pursue, it is still worthwhile to compare some competing models. First, calculate and report the DIC for the original model (that you fit for the previous quiz). Round your answer to the nearest whole number.
 
 ```{r}
+#| label: C2-L07-Ex2-1
 library("rjags")
 library("car")  # load the 'car' package
 data("Anscombe")  # load the data set
@@ -201,12 +202,14 @@ plot(mod3_sim)
 ```
 
 ```{r}
+#| label: C2-L07-Ex2-8
 dic.samples(mod_1, n.iter=1e5)
 dic.samples(mod_2, n.iter=1e5)
 dic.samples(mod_3, n.iter=1e5)
 ```
 
 ```{r}
+#| label: C2-L07-Ex2-9
 #mod3_sim
 
 #length(mod3_csim[mod3_csim[,1]>=0,3])/dim(mod3_csim)[1]
@@ -235,6 +238,7 @@ Fit both models in JAGS and calculate the DIC for each. If predictive performanc
 :::
 
 ```{r}
+#| label: C2-L07-Ex2-10
 mod_0=lm(data = Anscombe,formula = 'education ~ income + young + urban')
 
 summary((mod_0))
@@ -288,6 +292,7 @@ There is strong evidence that increases in per-capita income are associated with
 -   [x] Increases in per-capita income and percent youth are associated with increases in mean per-capita education expenditures. Increases in percent urban are associated with decreases in mean per-capita education expenditures.
 
 ```{r}
+#| label: C2-L07-Ex2-11
 summary(mod1_sim)
 (pm_params1 = colMeans(mod1_csim))
 ```
