--- a/C2-L08-Ex1.qmd
+++ b/C2-L08-Ex1.qmd
@@ -37,6 +37,7 @@ Re-fit the JAGS model on plant growth from the lesson with a separate variance f
 [ANOVA]{.column-margin} Compare the estimates between the original lesson model and this model with the summary function. Notice that the posterior means for the three μ parameters are essentially unchanged. However, the posterior variability for these parameters has changed. The posterior for which group's mean was most affected by fitting separate group variances?
 
 ```{r}
+#| label: C2-L08-Ex1-1
 #| output: False
 library("rjags")
 ```
@@ -107,6 +108,7 @@ mod2_csim = as.mcmc(do.call(rbind, mod2_sim)) # combined chains
 ```
 
 ```{r}
+#| label: C2-L08-Ex1-4
 summary(mod1_csim)
 summary(mod2_csim)
 ```
@@ -137,6 +139,7 @@ Hint: You can compute this directly with the following code: dic1−dic2.
 #### Solution:
 
 ```{r}
+#| label: C2-L08-Ex1-5
 (dic1 = dic.samples(mod1,1e5))
 (dic2 = dic.samples(mod2,1e5))
 dic1-dic2
@@ -168,6 +171,7 @@ This suggests we should stay with the original model (if our objective is good p
 #### Solution:
 
 ```{r}
+#| label: C2-L08-Ex1-6
 q5 = as.mcmc( cbind(mod1_csim,mudif=mod1_csim[,3]-mod1_csim[,1]) )  #<1>
 summary((q5))                                                       #<2>
 ```
@@ -202,6 +206,7 @@ MCMC algs are based on a process guaranteeing convergence to a stationary distri
 [ANOVA]{.column-margin} The linear model with a baseline mean and group effects is the default in R. However, we can also fit the cell means model in R using the following code:
 
 ```{r}
+#| label: C2-L08-Ex1-7
 mod_cm = lm(weight ~ -1 + group, data=PlantGrowth)
 summary(mod_cm)
 ```
