--- a/C2-L08-Ex2.qmd
+++ b/C2-L08-Ex2.qmd
@@ -96,6 +96,7 @@ How do the inferences for the coefficients compare to the original model fit in 
 #### Solution:
 
 ```{r}
+#| label: C2-L08-Ex2-4
 summary(mod_sim)
 summary(mod2_sim)
 ```
@@ -116,6 +117,7 @@ Notes: 1. There is a big change in sigma, it is much smaller in the second model
 [ANOVA]{.column-margin} Consider an ANOVA model for subjects' responses to three experimental factor variables related to a proposed health supplement: dose, frequency, and physical activity. Dose has two levels: 100mg and 200mg. Frequency has three levels: "daily," "twice-weekly," and "weekly." Physical activity has two levels: "low" and "high." If these are the only covariates available and we assume that responses are iid normally distributed, what is the maximum number of parameters we could potentially use to uniquely describe the mean response?
 
 ```{r}
+#| label: C2-L08-Ex2-5
 #| output: False
 library("rjags")
 ```
@@ -154,6 +156,7 @@ Report the DIC value for this model, rounded to the nearest whole number.
 #### Solution:
 
 ```{r}
+#| label: C2-L08-Ex2-6
 X = model.matrix( ~ wool + tension, data=warpbreaks)
 #ead(X)
 data("warpbreaks")
