--- a/C2-L08.qmd
+++ b/C2-L08.qmd
@@ -22,6 +22,7 @@ keywords:
 As an example of a one-way ANOVA, we'll look at the Plant Growth data in `R`.
 
 ```{r}
+#| label: C2-L08-1
 #| lst-label: lst-load-PlantGrowth
 #| lst-cap: Plant Growth Query
 #| attr-source: "id=lst-load-PlantGrowth lst-cap='Plant Growth Query'"
