--- a/C2-L09-Ex1.qmd
+++ b/C2-L09-Ex1.qmd
@@ -117,6 +117,7 @@ Report the posterior mode estimate of the coefficient for low OME.
 [**Logistic Regression**]{.column-margin} Next, we will fit a similar model in JAGS. To make the results comparable to those of the reference model, we will use the same configuration of covariates. We can extract this information from the reference model using model.matrix.
 
 ```{r}
+#| label: C2-L09-Ex1-5
 X = model.matrix(mod_glm)[,-1] # -1 removes the column of 1s for the intercept
 head(X)
 ```
@@ -234,6 +235,7 @@ Before analyzing the results, perform some MCMC diagnostic checks. What does the
 #### Solution:
 
 ```{r}
+#| label: C2-L09-Ex1-11
 
 library("coda")
 (raftery.diag(mod1))
@@ -281,6 +283,7 @@ First calculate the linear part by multiplying the variables by the coefficients
 #### Solution:
 
 ```{r}
+#| label: C2-L09-Ex1-12
 
 # logit(phi[i]) = b0 + b[1]*Age[i] + b[2]*OMElow[i] + b[3]*Loud[i] + b[4]*Noiseincoherent[i]
 
@@ -317,6 +320,7 @@ Once you have phat, calculate the proportion of in-sample observations that are 
 Use the following code:
 
 ```{r}
+#| label: C2-L09-Ex1-13
 # recall:	logit(phi[i]) = b0 + b[1]*Age[i] + b[2]*OMElow[i] + b[3]*Loud[i] + b[4]*Noiseincoherent[i]
 
 (pm_coef = colMeans(mod1_csim))
@@ -328,6 +332,7 @@ Use the following code:
 #### Solution:
 
 ```{r}
+#| label: C2-L09-Ex1-14
 
 pm_Xb = pm_coef["b0"] + X[,c(1,2,3,4)] %*% pm_coef[1:4]
 phat = 1.0 / (1.0 + exp(-pm_Xb))
