--- a/C2-L10-Ex1.qmd
+++ b/C2-L10-Ex1.qmd
@@ -26,6 +26,7 @@ Calculate $\mathbb{E}[y]$ in this case. Round your answer to one decimal place
 #### Solution:
 
 ```{python}
+#| label: C2-L10-Ex1-2
 import numpy as np
 
 def E(x1,x2,b0,b1,b2):
@@ -306,6 +307,7 @@ dic = dic.samples(calls_mod, n.iter=1e3)
 ```
 
 ```{r}
+#| label: C2-L10-Ex1-9
 #|llabel: q7s
 #calls_mod_csim
 #as.numeric(unlist(List))    
