--- a/C2-L11-Ex1.qmd
+++ b/C2-L11-Ex1.qmd
@@ -46,6 +46,7 @@ The grouped observations are conditionally independent, given their common group
 As usual, you can read the data into R with
 
 ```{r}
+#| label: C2-L11-Ex1-2
 dat = read.csv(file="data/pctgrowth.csv", header=TRUE)
 ```
 
@@ -78,6 +79,7 @@ All of these objectives are accomplished with a single model.
 We are interested in comparing these estimates to those obtained from a model that assumes no hierarchy (the ANOVA cell means model). We can approximate the posterior estimates for the five industry means under a noninformative prior by simply calculating the sample mean growth for the five industries. You can do this in R with:
 
 ```{r}
+#| label: C2-L11-Ex1-3
 means_anova = tapply(dat$y, INDEX=dat$grp, FUN=mean)
 ## dat is the data read from pctgrowth.csv
 ```
@@ -87,6 +89,7 @@ How do these compare with the estimates from the hierarchical model?
 Hint: It might help to plot them with:
 
 ```{r}
+#| label: C2-L11-Ex1-4
 plot(means_anova)
 #points(means_theta, col="red") ## where means_theta are the posterior point estimates for the industry means.
 ```
@@ -96,6 +99,7 @@ plot(means_anova)
 #### Solution:
 
 ```{r}
+#| label: C2-L11-Ex1-5
 #: title s4 - compute new DIC
 #(dic = dic.samples(mod, n.iter=1e3))
 ```
