--- a/C3-L01-Ex6.qmd
+++ b/C3-L01-Ex6.qmd
@@ -20,6 +20,7 @@ keywords:
 :::
 
 ```{r}
+#| label: C3-L01-Ex6-1
 set.seed(238)                            # reproducibility
 n <- 100                                  # the sample size
 w <- c(0.3, 0.25, 0.25,  0.2)        # weights
@@ -32,6 +33,7 @@ x <- rexp(n,rate = rates[ac])            # sample from the exponential distribut
 next we use the samples to estimate the mean and variance of the mixture
 
 ```{r}
+#| label: C3-L01-Ex6-2
 (sample_mean=mean(x))
 (sample_variance=var(x))
 ```
