--- a/A03.qmd
+++ b/A03.qmd
@@ -5,6 +5,7 @@ title: "Appendix: Continuous Distributions"
 Following a subjective view of distribution, which is more amenable to reinterpretation I use an indicator function to place restrictions on the range of parameter of the PDF.
 
 ```{r include=FALSE}
+#| label: A03-1
 # Necessary for using dvisvgm on macOS
 # See https://www.andrewheiss.com/blog/2021/08/27/tikz-knitr-html-svg-fun/
 Sys.setenv(LIBGS = "/usr/local/share/ghostscript/9.53.3/lib/libgs.dylib.9.53")
@@ -298,6 +299,7 @@ $$
 $$ {#eq-normal-sum}
 
 ```{python}
+#| label: A03-2
 import numpy as np
 from scipy.stats import norm
 import matplotlib.pyplot as plt
@@ -509,6 +511,7 @@ $$ {#eq-exponential-mgf}
 -   memoryless
 
 ```{python}
+#| label: A03-3
 import numpy as np
 from scipy.stats import expon
 import matplotlib.pyplot as plt
