--- a/C1-L12.qmd
+++ b/C1-L12.qmd
@@ -77,6 +77,7 @@ attach(oring)
 ```
 
 ```{R}
+#| label: C1-L12-2
 head(oring)
 ```
 
@@ -155,6 +156,7 @@ What's the posterior probability that the damage index is greater than zero?
 We're looking at Galton's seminal data predicting the height of children from the height of the parents.
 
 ```{R}
+#| label: C1-L12-12
 #| echo: False
 #| outoutput: False
 heights=read.table("data/Galton.txt", header=T,stringsAsFactors = TRUE)
@@ -227,15 +229,18 @@ Let's create a 95% posterior interval for the difference in height by gender
 ```
 
 ```{R}
+#| label: C1-L12-18
 5.226 + 0.144 * qt(.975,894)
 ```
 
 Let's make a **posterior prediction interval** for a male and female with a father whose 68 inches and a mother whose 64 inches.
 
 ```{R}
+#| label: C1-L12-19
 predict(heights.lm,data.frame(Father=68,Mother=64,Gender="M"), interval="predict")
 ```
 
 ```{R}
+#| label: C1-L12-20
 predict(heights.lm,data.frame(Father=68,Mother=64,Gender="F"), interval="predict")
 ```
