--- a/C2-L05.qmd
+++ b/C2-L05.qmd
@@ -176,6 +176,7 @@ $$
 $$ {#eq-full-conditional-update-for-mean}
 
 ```{r}
+#| label: C2-L05-1
 #' update_mu
 #'
 #' @param n - sample size
@@ -206,6 +207,7 @@ $$
 $$ {#eq-full-conditional-update-for-variance}
 
 ```{r}
+#| label: C2-L05-2
 #' update_sig2
 #'
 #' @param n - sample size
@@ -235,6 +237,7 @@ With functions for drawing from the full conditionals, we are ready to write a f
 ### Gibbs sampler in `R`
 
 ```{r}
+#| label: C2-L05-3
 
 gibbs = function(y, n_iter, init, prior) {
   ybar = mean(y)
@@ -278,6 +281,7 @@ The prior effective sample size. Which we'll call $n_0$, is two times this $\nu_
 This particular parameterization of the *Inverse gamma* distribution is called the **Scaled Inverse Chi Square Distribution**, where the two parameters are $n_0$ and $s^2_0$.
 
 ```{r}
+#| label: C2-L05-4
 y = c(1.2, 1.4, -0.5, 0.3, 0.9, 2.3, 1.0, 0.1, 1.3, 1.9) # <1>
 ybar = mean(y)
 n = length(y)
@@ -300,6 +304,7 @@ points(ybar, 0, pch=19) # sample mean
 Finally, we can initialize and run the sampler!
 
 ```{r}
+#| label: C2-L05-5
 set.seed(53)
 
 init = list()
@@ -309,15 +314,18 @@ post = gibbs(y=y, n_iter=1e3, init=init, prior=prior)
 ```
 
 ```{r}
+#| label: C2-L05-6
 head(post)
 ```
 
 ```{r}
+#| label: C2-L05-7
 library("coda")
 plot(as.mcmc(post))
 ```
 
 ```{r}
+#| label: C2-L05-8
 summary(as.mcmc(post))
 ```
 
