--- a/C4-L01.qmd
+++ b/C4-L01.qmd
@@ -557,6 +557,9 @@ This video walks through the code snippet below and provides examples of how to 
 
 ###  R code: Sample data from AR(1) processes (Reading)
 
+\index{AR(1)}
+\index{ARIMA}
+
 ```{r}
 #| label: "ar(1) sampling"
 
