--- a/C4-L02.qmd
+++ b/C4-L02.qmd
@@ -229,7 +229,10 @@ print(cbind(r, abs(lambda))[order(r, decreasing=TRUE), ][c(2,4,6,8),])
 
 ## Simulating data from an AR(p) (reading)
 
-1.  Rcode to simulate data from an AR(2) with one pair of complex-valued reciprocal roots and plot the corresponding sample ACF and sample PACF
+\index{AR(p)}
+\index{ARIMA}
+
+1.  R code to simulate data from an AR(2) with one pair of complex-valued reciprocal roots and plot the corresponding sample ACF and sample PACF
 
 ```{r}
 #| label: ar-sim-complex-valued-roots
